<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:text="@string/Q1"
            android:textSize="@dimen/question_font_size" />

        <EditText
            android:id="@+id/question_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/hint1"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:text="@string/Q2"
            android:textSize="@dimen/question_font_size" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_question_2_op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:text="@string/Q2_OP2"
                android:textSize="@dimen/option_font_size" />

            <RadioButton
                android:id="@+id/rb_question_2_op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2_OP1"
                android:textSize="@dimen/option_font_size" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:text="@string/Q3"
            android:textSize="@dimen/question_font_size" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_question_3_op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:text="@string/Q3_OP1"
                android:textSize="@dimen/option_font_size" />

            <RadioButton
                android:id="@+id/rb_question_3_op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3_OP2"
                android:textSize="@dimen/option_font_size" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Q4"
            android:textSize="@dimen/question_font_size" />

        <EditText
            android:id="@+id/question_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/hint2"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:text="@string/Q5"
            android:textSize="@dimen/question_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_question_5_op1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5_OP1"
                    android:textSize="@dimen/option_font_size" />

                <CheckBox
                    android:id="@+id/cb_question_5_op2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5_OP2"
                    android:textSize="@dimen/option_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_question_5_op3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5_OP3"
                    android:textSize="@dimen/option_font_size" />

                <CheckBox
                    android:id="@+id/cb_question_5_op4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5_OP4"
                    android:textSize="@dimen/option_font_size" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:text="@string/Q6"
            android:textSize="@dimen/question_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_question_6_op1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q6_OP1"
                    android:textSize="@dimen/option_font_size" />

                <CheckBox
                    android:id="@+id/cb_question_6_op2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q6_OP2"
                    android:textSize="@dimen/option_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_question_6_op3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q6_OP3"
                    android:textSize="@dimen/option_font_size" />

                <CheckBox
                    android:id="@+id/cb_question_6_op4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q6_OP4"
                    android:textSize="@dimen/option_font_size" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:text="@string/Q7"
            android:textSize="@dimen/question_font_size" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_question_7_op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:text="@string/Q7_OP1"
                android:textSize="@dimen/option_font_size" />

            <RadioButton
                android:id="@+id/rb_question_7_op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7_OP2"
                android:textSize="@dimen/option_font_size" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:text="@string/Q8"
            android:textSize="@dimen/question_font_size" />

        <EditText
            android:id="@+id/question_eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/hint1"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button"
            android:background="@color/colorAccent"
            android:onClick="submitQuiz"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/question_font_size" />

    </LinearLayout>
</ScrollView>